﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.019000 2014-08-18T03:48:49Z
 [00 Minor]
 - Test and dependency recommendation adjustments.
 - no code changes.

 [Dependencies::Noteworthy]
 - Cpanel::JSON::XS and JSON::MaybeXS now in runtime.recommends instead of JSON{,::XS}

 [Dependencies::Stats]
 - Dependencies changed since 2.018000, see misc/*.deps* for details
 - develop: ↑2
 - runtime: ↑2 (recommends: +2 -2)
 - test: -1

 [Tests]
 - Tests no longer require parsing JSON manually to validate themselves and instead just read distmeta.

2.018000 2014-08-16T21:56:32Z
 [00 Minor]
 - CPANDAY!
 - Add new KENTNL::RecommendFixes trick.

 [Dependencies::Stats]
 - Dependencies changed since 2.017002, see misc/*.deps* for details
 - develop: +1 ↑11 (suggests: ↑1)
 - runtime: +1 ↑15
 - test: ↑2

2.017002 2014-08-15T20:54:32Z
 [00 Trivial]
 - util updates.
 - whitespace adjustment

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Utils]
 - dep_changes: Greatly increase the cache timing to 5h instead of 30m now it proves to be more stable.

2.017001 2014-08-15T01:59:33Z
 [00 Bugfix]
 - Use a version of Git::Contributors that is safe for testing and general use.

 [Dependencies::Stats]
 - Dependencies changed since 2.017000, see misc/*.deps* for details
 - develop: ↑3
 - runtime: ↑6
 - test: ↑1

2.017000 2014-08-11T20:48:43Z
 [00 Minor]
 - Start using Git::Contributors.
 - dep_changes: more cache levels
 - dep_changes: cache loaded CPAN::Meta objects for unique file SHAs
 - dep_changes: use Sereal for the CHI cache serializer.
 - dep_changes: group per-location caches by directory with cwd + base64 filter

 [Dependencies::Stats]
 - Dependencies changed since 2.016008, see misc/*.deps* for details
 - develop: +1
 - runtime: +1 (recommends: +1)

2.016008 2014-08-11T10:42:36Z
 [00 Minor]
 - dep_utils: fail better when build/master doesn't exist
 - dep_utils: try use META.yml if META.json doesn't exist
 - tests: update reportprereqs test
