@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-2.019001
+2.020000
+ [Changed / runtime requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.002001 → 0.002002
 
 2.019000 2014-08-18T03:48:49Z
  [Changed / runtime requires]
