@@ -1,6 +1,8 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
-2.019001
+2.020000
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.002001 → 0.002002
 
 2.019000 2014-08-18T03:48:49Z
  [Changed / develop requires]
